# Jefferson-cipher

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_disk_sets_and_disks.py  0002_create_users.py  0003_create_refresh_tokens.py  0004_add_disk_set_owner.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: audit.py  config.py  errors.py  rate_limit.py  request_id.py  security.py  security_headers.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/repositories/: __init__.py  disk_sets.py  refresh_tokens.py  users.py
backend/app/schemas/: __init__.py  auth.py  cipher.py  disk_set.py  user.py
backend/app/services/: __init__.py  auth.py  cipher_from_disk_set.py  disk_sets.py
backend/app/web/: __init__.py  auth.py  forms.py  routes.py  view_models.py
backend/tests/: conftest.py
backend/tests/api/: test_api_without_database.py  test_audit_logs.py  test_auth.py  test_cipher_api.py  test_cipher_api_with_disk_set_id.py  test_cors_and_security_headers.py  test_disk_set_crud.py  test_disk_set_ownership.py  test_disk_set_pagination.py  test_disk_sets_api.py  test_health.py  test_openapi_contract.py  test_rate_limiting.py  test_ready.py  test_refresh_tokens.py  test_request_id.py  test_security_inventory.py  test_users_me.py
backend/tests/core/: test_config.py
backend/tests/db/: test_disk_set_ownership_models.py  test_models.py  test_runtime_contract.py  (+3 more)
(+58 files in other folders)
